[package]
name = "b-hunt"
version = "0.1.0"
authors = ["Morgan Van Amerongen <mistigri.van@gmail.com>"]
edition = "2018"

[dependencies]
ggez = "0.5.1"
cgmath = { version = "0.17", features = ["mint"] }
rand = "0.8.0"
mysql = "20.1.0"
dotenv = "0.15.0"
sha1 = "0.6.0"
reqwest = { version = "0.11.1", features = ["blocking", "json"] }
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
urlencoding = "1.1.1"
